Fixed the Alignment Issuegit add .!

--- a/ui/app/styles/registration/_registration.scss
+++ b/ui/app/styles/registration/_registration.scss
@@ -7,7 +7,6 @@
 @import "patientDeathInformation";
 
 body{
-  font-size: 14px;
   
   input#Observations {
     width:20.5em;
